<resources>
    <string name="app_name">RecyApp</string>
    <string name="main_menu">Menú Principal</string>
    <string name="login_bnvda">BIENVENIDO</string>
    <string name="cdescivlogin">ivusuario</string>
    <string name="cdesccandado">ivcandado</string>
    <string name="hintUsuario">Ingrese Correo</string>
    <string name="hintContrasenia">Ingrese Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrarse">Registrarse</string>

    <string name="aceptar">Aceptar</string>

    <string name="cancelar">Cancelar</string>

    <string name="textConfirmarRecompensa">Tu recompensa llegará en un rango de 1 a 2 días</string>

    <string name="mensajeEspera">El administrador confirmara su registro para la asignación de puntos, tenga buen día!</string>

</resources>