<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_Login"
    tools:context=".LoginActivity"
    android:background="@drawable/iniciosesion_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="280dp"
            android:layout_marginRight="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/splash_color"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/login_bnvda"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:background="@drawable/shape_inputsesion">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_account_box_24"
                    android:contentDescription="@string/cdescivlogin"
                    android:layout_marginStart="15dp">
                </ImageView>

                <EditText
                    android:id="@+id/ETUsuarioInicioSesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="3dp"
                    android:ems="10"
                    android:autofillHints="name"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/hintUsuario"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_inputsesion">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cdesccandado"
                    android:src="@drawable/ic_baseline_lock_24"
                    android:layout_marginStart="15dp">
                </ImageView>

                <EditText
                    android:id="@+id/ETPasswordInicioSesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="3dp"
                    android:ems="10"
                    android:fontFamily="sans-serif-medium"
                    android:autofillHints="password"
                    android:hint="@string/hintContrasenia"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />
            </LinearLayout>

            <Button
                android:id="@+id/BtnIngresar"
                android:layout_width="270dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/botonGeneral"
                android:text="@string/btnIngresar"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/BtnRegistrar"
                android:layout_width="230dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/black"
                android:text="@string/btnRegistrarse"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>